add the firsts discoveries about the data

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -1,12 +1,522 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# EDA"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"zomato.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Restaurant ID</th>\n",
+       "      <th>Restaurant Name</th>\n",
+       "      <th>Country Code</th>\n",
+       "      <th>City</th>\n",
+       "      <th>Address</th>\n",
+       "      <th>Locality</th>\n",
+       "      <th>Locality Verbose</th>\n",
+       "      <th>Longitude</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Cuisines</th>\n",
+       "      <th>Average Cost for two</th>\n",
+       "      <th>Currency</th>\n",
+       "      <th>Has Table booking</th>\n",
+       "      <th>Has Online delivery</th>\n",
+       "      <th>Is delivering now</th>\n",
+       "      <th>Switch to order menu</th>\n",
+       "      <th>Price range</th>\n",
+       "      <th>Aggregate rating</th>\n",
+       "      <th>Rating color</th>\n",
+       "      <th>Rating text</th>\n",
+       "      <th>Votes</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>6310675</td>\n",
+       "      <td>Mama Lou's Italian Kitchen</td>\n",
+       "      <td>162</td>\n",
+       "      <td>Las Piñas City</td>\n",
+       "      <td>Block 1, Lot 36, Tropical Avenue Corner Tropic...</td>\n",
+       "      <td>BF International</td>\n",
+       "      <td>BF International, Las Piñas City</td>\n",
+       "      <td>121.009787</td>\n",
+       "      <td>14.447615</td>\n",
+       "      <td>Italian</td>\n",
+       "      <td>1100</td>\n",
+       "      <td>Botswana Pula(P)</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>3F7E00</td>\n",
+       "      <td>Excellent</td>\n",
+       "      <td>619</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>6310675</td>\n",
+       "      <td>Mama Lou's Italian Kitchen</td>\n",
+       "      <td>162</td>\n",
+       "      <td>Las Piñas City</td>\n",
+       "      <td>Block 1, Lot 36, Tropical Avenue Corner Tropic...</td>\n",
+       "      <td>BF International</td>\n",
+       "      <td>BF International, Las Piñas City</td>\n",
+       "      <td>121.009787</td>\n",
+       "      <td>14.447615</td>\n",
+       "      <td>Italian</td>\n",
+       "      <td>1100</td>\n",
+       "      <td>Botswana Pula(P)</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>3F7E00</td>\n",
+       "      <td>Excellent</td>\n",
+       "      <td>619</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Restaurant ID             Restaurant Name  Country Code            City  \\\n",
+       "0        6310675  Mama Lou's Italian Kitchen           162  Las Piñas City   \n",
+       "1        6310675  Mama Lou's Italian Kitchen           162  Las Piñas City   \n",
+       "\n",
+       "                                             Address          Locality  \\\n",
+       "0  Block 1, Lot 36, Tropical Avenue Corner Tropic...  BF International   \n",
+       "1  Block 1, Lot 36, Tropical Avenue Corner Tropic...  BF International   \n",
+       "\n",
+       "                   Locality Verbose   Longitude   Latitude Cuisines  \\\n",
+       "0  BF International, Las Piñas City  121.009787  14.447615  Italian   \n",
+       "1  BF International, Las Piñas City  121.009787  14.447615  Italian   \n",
+       "\n",
+       "   Average Cost for two          Currency  Has Table booking  \\\n",
+       "0                  1100  Botswana Pula(P)                  1   \n",
+       "1                  1100  Botswana Pula(P)                  1   \n",
+       "\n",
+       "   Has Online delivery  Is delivering now  Switch to order menu  Price range  \\\n",
+       "0                    0                  0                     0            3   \n",
+       "1                    0                  0                     0            3   \n",
+       "\n",
+       "   Aggregate rating Rating color Rating text  Votes  \n",
+       "0               4.6       3F7E00   Excellent    619  \n",
+       "1               4.6       3F7E00   Excellent    619  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.set_option('display.max_columns', None)\n",
+    "df.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Restaurant ID             int64\n",
+       "Restaurant Name          object\n",
+       "Country Code              int64\n",
+       "City                     object\n",
+       "Address                  object\n",
+       "Locality                 object\n",
+       "Locality Verbose         object\n",
+       "Longitude               float64\n",
+       "Latitude                float64\n",
+       "Cuisines                 object\n",
+       "Average Cost for two      int64\n",
+       "Currency                 object\n",
+       "Has Table booking         int64\n",
+       "Has Online delivery       int64\n",
+       "Is delivering now         int64\n",
+       "Switch to order menu      int64\n",
+       "Price range               int64\n",
+       "Aggregate rating        float64\n",
+       "Rating color             object\n",
+       "Rating text              object\n",
+       "Votes                     int64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(7527, 21)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Limpeza dos dados"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df1 = df.copy()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Visão Geral"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. Quantos restaurantes únicos estão registrados?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6942"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1['Restaurant ID'].nunique()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " 2. Quantos países únicos estão registrados?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1['Country Code'].nunique()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3. Quantas cidades únicas estão registradas?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "125"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1['City'].nunique()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "4. Qual o total de avaliações feitas?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "28"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df1['Rating text'].unique())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " 5. Qual o total de tipos de culinária registrados?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2832"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1['Cuisines'].nunique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Restaurant ID</th>\n",
+       "      <th>Restaurant Name</th>\n",
+       "      <th>Country Code</th>\n",
+       "      <th>City</th>\n",
+       "      <th>Address</th>\n",
+       "      <th>Locality</th>\n",
+       "      <th>Locality Verbose</th>\n",
+       "      <th>Longitude</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Cuisines</th>\n",
+       "      <th>Average Cost for two</th>\n",
+       "      <th>Currency</th>\n",
+       "      <th>Has Table booking</th>\n",
+       "      <th>Has Online delivery</th>\n",
+       "      <th>Is delivering now</th>\n",
+       "      <th>Switch to order menu</th>\n",
+       "      <th>Price range</th>\n",
+       "      <th>Aggregate rating</th>\n",
+       "      <th>Rating color</th>\n",
+       "      <th>Rating text</th>\n",
+       "      <th>Votes</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>6310675</td>\n",
+       "      <td>Mama Lou's Italian Kitchen</td>\n",
+       "      <td>162</td>\n",
+       "      <td>Las Piñas City</td>\n",
+       "      <td>Block 1, Lot 36, Tropical Avenue Corner Tropic...</td>\n",
+       "      <td>BF International</td>\n",
+       "      <td>BF International, Las Piñas City</td>\n",
+       "      <td>121.009787</td>\n",
+       "      <td>14.447615</td>\n",
+       "      <td>Italian</td>\n",
+       "      <td>1100</td>\n",
+       "      <td>Botswana Pula(P)</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>3F7E00</td>\n",
+       "      <td>Excellent</td>\n",
+       "      <td>619</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>6310675</td>\n",
+       "      <td>Mama Lou's Italian Kitchen</td>\n",
+       "      <td>162</td>\n",
+       "      <td>Las Piñas City</td>\n",
+       "      <td>Block 1, Lot 36, Tropical Avenue Corner Tropic...</td>\n",
+       "      <td>BF International</td>\n",
+       "      <td>BF International, Las Piñas City</td>\n",
+       "      <td>121.009787</td>\n",
+       "      <td>14.447615</td>\n",
+       "      <td>Italian</td>\n",
+       "      <td>1100</td>\n",
+       "      <td>Botswana Pula(P)</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>3F7E00</td>\n",
+       "      <td>Excellent</td>\n",
+       "      <td>619</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Restaurant ID             Restaurant Name  Country Code            City  \\\n",
+       "0        6310675  Mama Lou's Italian Kitchen           162  Las Piñas City   \n",
+       "1        6310675  Mama Lou's Italian Kitchen           162  Las Piñas City   \n",
+       "\n",
+       "                                             Address          Locality  \\\n",
+       "0  Block 1, Lot 36, Tropical Avenue Corner Tropic...  BF International   \n",
+       "1  Block 1, Lot 36, Tropical Avenue Corner Tropic...  BF International   \n",
+       "\n",
+       "                   Locality Verbose   Longitude   Latitude Cuisines  \\\n",
+       "0  BF International, Las Piñas City  121.009787  14.447615  Italian   \n",
+       "1  BF International, Las Piñas City  121.009787  14.447615  Italian   \n",
+       "\n",
+       "   Average Cost for two          Currency  Has Table booking  \\\n",
+       "0                  1100  Botswana Pula(P)                  1   \n",
+       "1                  1100  Botswana Pula(P)                  1   \n",
+       "\n",
+       "   Has Online delivery  Is delivering now  Switch to order menu  Price range  \\\n",
+       "0                    0                  0                     0            3   \n",
+       "1                    0                  0                     0            3   \n",
+       "\n",
+       "   Aggregate rating Rating color Rating text  Votes  \n",
+       "0               4.6       3F7E00   Excellent    619  \n",
+       "1               4.6       3F7E00   Excellent    619  "
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1.head(2)"
    ]
   },
   {
