restructure repository and create data cleaning notebook
- Restructure the repository for better organization.
- Create a new notebook, notebook_tratamento.ipynb, dedicated to data cleaning tasks.
- Implement column renaming to snake_case, including specific renaming of 'Restaurant ID' to 'restaurant_id'.
- Remove the 'switch_to_order_menu' column from the DataFrame as it is not needed.

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -701,28 +701,7 @@
    "execution_count": 51,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "COUNTRIES = {\n",
-    "    1: \"India\",\n",
-    "    14: \"Australia\",\n",
-    "    30: \"Brazil\",\n",
-    "    37: \"Canada\",\n",
-    "    94: \"Indonesia\",\n",
-    "    148: \"New Zeland\",\n",
-    "    162: \"Philippines\",\n",
-    "    166: \"Qatar\",\n",
-    "    184: \"Singapure\",\n",
-    "    189: \"South Africa\",\n",
-    "    191: \"Sri Lanka\",\n",
-    "    208: \"Turkey\",\n",
-    "    214: \"United Arab Emirates\",\n",
-    "    215: \"England\",\n",
-    "    216: \"United States of America\",\n",
-    "}\n",
-    "\n",
-    "def country_name(country_id):\n",
-    "    return COUNTRIES.get(country_id, 'Unknown Country')"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1023,6 +1002,211 @@
     "# encontrar o país com maior quantidade de avaliações\n",
     "pais_com_maior_quantidade_de_avaliacoes = maior_quantidade_de_avaliacoes_por_pais.idxmax()\n",
     "print(f\"País com maior quantidade de avaliações é {pais_com_maior_quantidade_de_avaliacoes}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>restaurant_id</th>\n",
+       "      <th>restaurant_name</th>\n",
+       "      <th>country_code</th>\n",
+       "      <th>city</th>\n",
+       "      <th>address</th>\n",
+       "      <th>locality</th>\n",
+       "      <th>locality_verbose</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>cuisines</th>\n",
+       "      <th>average_cost_for_two</th>\n",
+       "      <th>currency</th>\n",
+       "      <th>has_table_booking</th>\n",
+       "      <th>has_online_delivery</th>\n",
+       "      <th>is_delivering_now</th>\n",
+       "      <th>switch_to_order_menu</th>\n",
+       "      <th>price_range</th>\n",
+       "      <th>aggregate_rating</th>\n",
+       "      <th>rating_color</th>\n",
+       "      <th>rating_text</th>\n",
+       "      <th>votes</th>\n",
+       "      <th>country_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>6310675</td>\n",
+       "      <td>Mama Lou's Italian Kitchen</td>\n",
+       "      <td>162</td>\n",
+       "      <td>Las Piñas City</td>\n",
+       "      <td>Block 1, Lot 36, Tropical Avenue Corner Tropic...</td>\n",
+       "      <td>BF International</td>\n",
+       "      <td>BF International, Las Piñas City</td>\n",
+       "      <td>121.009787</td>\n",
+       "      <td>14.447615</td>\n",
+       "      <td>Italian</td>\n",
+       "      <td>1100</td>\n",
+       "      <td>Botswana Pula(P)</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>3F7E00</td>\n",
+       "      <td>Excellent</td>\n",
+       "      <td>619</td>\n",
+       "      <td>Philippines</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>6310675</td>\n",
+       "      <td>Mama Lou's Italian Kitchen</td>\n",
+       "      <td>162</td>\n",
+       "      <td>Las Piñas City</td>\n",
+       "      <td>Block 1, Lot 36, Tropical Avenue Corner Tropic...</td>\n",
+       "      <td>BF International</td>\n",
+       "      <td>BF International, Las Piñas City</td>\n",
+       "      <td>121.009787</td>\n",
+       "      <td>14.447615</td>\n",
+       "      <td>Italian</td>\n",
+       "      <td>1100</td>\n",
+       "      <td>Botswana Pula(P)</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>3F7E00</td>\n",
+       "      <td>Excellent</td>\n",
+       "      <td>619</td>\n",
+       "      <td>Philippines</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   restaurant_id             restaurant_name  country_code            city  \\\n",
+       "0        6310675  Mama Lou's Italian Kitchen           162  Las Piñas City   \n",
+       "1        6310675  Mama Lou's Italian Kitchen           162  Las Piñas City   \n",
+       "\n",
+       "                                             address          locality  \\\n",
+       "0  Block 1, Lot 36, Tropical Avenue Corner Tropic...  BF International   \n",
+       "1  Block 1, Lot 36, Tropical Avenue Corner Tropic...  BF International   \n",
+       "\n",
+       "                   locality_verbose   longitude   latitude cuisines  \\\n",
+       "0  BF International, Las Piñas City  121.009787  14.447615  Italian   \n",
+       "1  BF International, Las Piñas City  121.009787  14.447615  Italian   \n",
+       "\n",
+       "   average_cost_for_two          currency  has_table_booking  \\\n",
+       "0                  1100  Botswana Pula(P)                  1   \n",
+       "1                  1100  Botswana Pula(P)                  1   \n",
+       "\n",
+       "   has_online_delivery  is_delivering_now  switch_to_order_menu  price_range  \\\n",
+       "0                    0                  0                     0            3   \n",
+       "1                    0                  0                     0            3   \n",
+       "\n",
+       "   aggregate_rating rating_color rating_text  votes country_name  \n",
+       "0               4.6       3F7E00   Excellent    619  Philippines  \n",
+       "1               4.6       3F7E00   Excellent    619  Philippines  "
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1.head(2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "6. Qual o nome do país que possui a maior quantidade de restaurantes que fazem\n",
+    "entrega?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "País com maior quantidade de restaurantes que entregam é India\n"
+     ]
+    }
+   ],
+   "source": [
+    "# pais com maior quantidade de restaurantes com entrega\n",
+    "pais_que_mais_entregam = df1['country_name'][df1['has_online_delivery'] == 1]\n",
+    "pais_que_mais_entregam = pais_que_mais_entregam.value_counts().idxmax()\n",
+    "print(f\"País com maior quantidade de restaurantes que entregam é {pais_que_mais_entregam}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "7. Qual o nome do país que possui a maior quantidade de restaurantes que aceitam\n",
+    "reservas?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "8. Qual o nome do país que possui, na média, a maior quantidade de avaliações\n",
+    "registrada?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "9. Qual o nome do país que possui, na média, a maior nota média registrada?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "10. Qual o nome do país que possui, na média, a menor nota média registrada?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "11. Qual a média de preço de um prato para dois por país?"
    ]
   }
  ],
