fix the count of NaN values in each column of the dataframe

--- a/notebooks/notebook_tratamento.ipynb
+++ b/notebooks/notebook_tratamento.ipynb
@@ -1372,41 +1372,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "restaurant_id tem 0 nan\n",
-      "restaurant_name tem 0 nan\n",
-      "country_code tem 0 nan\n",
-      "city tem 0 nan\n",
-      "address tem 0 nan\n",
-      "locality tem 0 nan\n",
-      "locality_verbose tem 0 nan\n",
-      "longitude tem 0 nan\n",
-      "latitude tem 0 nan\n",
-      "cuisines tem 0 nan\n",
-      "average_cost_for_two tem 0 nan\n",
-      "currency tem 0 nan\n",
-      "has_table_booking tem 0 nan\n",
-      "has_online_delivery tem 0 nan\n",
-      "is_delivering_now tem 0 nan\n",
-      "price_range tem 0 nan\n",
-      "aggregate_rating tem 0 nan\n",
-      "rating_color tem 0 nan\n",
-      "rating_text tem 0 nan\n",
-      "votes tem 0 nan\n"
+      "restaurant_id tem 0 NaN\n",
+      "restaurant_name tem 0 NaN\n",
+      "country_code tem 0 NaN\n",
+      "city tem 0 NaN\n",
+      "address tem 0 NaN\n",
+      "locality tem 0 NaN\n",
+      "locality_verbose tem 0 NaN\n",
+      "longitude tem 0 NaN\n",
+      "latitude tem 0 NaN\n",
+      "cuisines tem 0 NaN\n",
+      "average_cost_for_two tem 0 NaN\n",
+      "currency tem 0 NaN\n",
+      "has_table_booking tem 0 NaN\n",
+      "has_online_delivery tem 0 NaN\n",
+      "is_delivering_now tem 0 NaN\n",
+      "price_range tem 0 NaN\n",
+      "aggregate_rating tem 0 NaN\n",
+      "rating_color tem 0 NaN\n",
+      "rating_text tem 0 NaN\n",
+      "votes tem 0 NaN\n"
      ]
     }
    ],
    "source": [
-    "na = ['nan']\n",
+    "\n",
     "colunas = list(df1.columns)\n",
     "for col in colunas:\n",
-    "    print(f'{col} tem {len(df1.loc[df1[col].isin(na), :])} {na[0]}')"
+    "    num_nans = df1[col].isna().sum()\n",
+    "    print(f'{col} tem {num_nans} NaN')"
    ]
   },
   {
