extract the first cuisine from each entry in the 'cuisines' column of the dataframe and save new curated data

--- a/notebooks/notebook_tratamento.ipynb
+++ b/notebooks/notebook_tratamento.ipynb
@@ -1412,6 +1412,77 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0                                       Italian\n",
+       "1                               European, Asian\n",
+       "2           Filipino, American, Italian, Bakery\n",
+       "3                                      American\n",
+       "4                                      Filipino\n",
+       "                         ...                   \n",
+       "6924                 Italian, Pizza, Fresh Fish\n",
+       "6925    Fast Food, Izgara, Seafood, Tea, Coffee\n",
+       "6926                            Restaurant Cafe\n",
+       "6927                          Home-made, Izgara\n",
+       "6928      Restaurant Cafe, Kebab, Turkish Pizza\n",
+       "Name: cuisines, Length: 6929, dtype: object"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1['cuisines']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df1[\"cuisines\"] = df1.loc[:, \"cuisines\"].apply(lambda x: x.split(\",\")[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0               Italian\n",
+       "1              European\n",
+       "2              Filipino\n",
+       "3              American\n",
+       "4              Filipino\n",
+       "             ...       \n",
+       "6924            Italian\n",
+       "6925          Fast Food\n",
+       "6926    Restaurant Cafe\n",
+       "6927          Home-made\n",
+       "6928    Restaurant Cafe\n",
+       "Name: cuisines, Length: 6929, dtype: object"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1['cuisines']"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
    "outputs": [],
