update README.md with new questions about country and city answer citiy questions

--- a/notebooks/notebook_visoes.ipynb
+++ b/notebooks/notebook_visoes.ipynb
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -563,7 +563,7 @@
        "'India'"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -591,7 +591,7 @@
        "'United States of America'"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -611,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -698,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -828,7 +828,7 @@
        "1       3F7E00   Excellent    469  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -847,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -875,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -901,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -910,7 +910,7 @@
        "'Indonesia'"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -931,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -1058,7 +1058,7 @@
        "14                    Brazil              3.32"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1078,7 +1078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -1087,7 +1087,7 @@
        "'Brazil'"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1108,7 +1108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -1235,7 +1235,7 @@
        "14                    Canada                 41.86"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1244,6 +1244,259 @@
     "media_preco_de_um_prato_para_dois_por_pais = round(df.loc[:, ['average_cost_for_two', 'country_name']].groupby(['country_name']).mean(\n",
     ").sort_values(by='average_cost_for_two', ascending=False).reset_index(), 2)\n",
     "media_preco_de_um_prato_para_dois_por_pais\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Visão Cidade "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. Qual o nome da cidade que possui mais restaurantes registrados?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Abu Dhabi'"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cidade_com_mais_restaurantes = df.loc[:, ['city', 'restaurant_id']].groupby(['city']).count().sort_values(by='restaurant_id', ascending=False).reset_index()\n",
+    "cidade_com_mais_restaurantes.iloc[0, 0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. Qual o nome da cidade que possui mais restaurantes com nota média acima de\n",
+    "4?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Bangalore'"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cidade_com_mais_restaurantes_nota_media_acima_de_4 = df.loc[:, ['city', 'restaurant_id', 'aggregate_rating']].groupby(['city', 'restaurant_id']).mean().sort_values(by='aggregate_rating', ascending=False).reset_index()\n",
+    "cidade_mais_restaurantes_nota_media_acima_de_4 = cidade_mais_restaurantes_nota_media_acima_de_4.loc[cidade_mais_restaurantes_nota_media_acima_de_4['aggregate_rating'] > 4, ['city', 'restaurant_id']].groupby(\n",
+    "    ['city']).count().sort_values(by='restaurant_id', ascending=False).reset_index()\n",
+    "cidade_com_mais_restaurantes_nota_media_acima_de_4.iloc[0, 0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3. Qual o nome da cidade que possui mais restaurantes com nota média abaixo de\n",
+    "2.5?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Gangtok'"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cidade_com_mais_restaurantes_nota_media_abaixo_de_2_e_meio = df.loc[:, ['city', 'restaurant_id', 'aggregate_rating']].groupby(\n",
+    "    ['city', 'restaurant_id']).mean().sort_values(by='aggregate_rating', ascending=False).reset_index()\n",
+    "cidade_com_mais_restaurantes_nota_media_abaixo_de_2_e_meio = cidade_com_mais_restaurantes_nota_media_abaixo_de_2_e_meio.loc[cidade_com_mais_restaurantes_nota_media_abaixo_de_2_e_meio['aggregate_rating'] < 2.5, ['city', 'restaurant_id']].groupby(\n",
+    "    ['city']).count().sort_values(by='restaurant_id', ascending=False).reset_index()\n",
+    "cidade_com_mais_restaurantes_nota_media_abaixo_de_2_e_meio.iloc[0, 0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "4. Qual o nome da cidade que possui o maior valor médio de um prato para dois?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Adelaide'"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cidade_com_maior_valor_medio_de_prato_para_dois = df.loc[:, ['city', 'average_cost_for_two']].groupby(['city']).mean(\n",
+    ").sort_values(by='average_cost_for_two', ascending=False).reset_index()\n",
+    "cidade_com_maior_valor_medio_de_prato_para_dois.iloc[0, 0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "5. Qual o nome da cidade que possui a maior quantidade de tipos de culinária\n",
+    "distintas?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Bhopal'"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cidade_maior_qtdade_de_culinaria_distintas = df.loc[:, ['city', 'cuisines', 'restaurant_id']].groupby(\n",
+    "    ['city', 'cuisines']).count().sort_values(by='restaurant_id', ascending=False).reset_index()\n",
+    "re5 = cidade_maior_qtdade_de_culinaria_distintas.loc[:, ['city', 'cuisines']].groupby(['city']).count(\n",
+    ").sort_values(by='cuisines', ascending=False).reset_index()\n",
+    "cidade_maior_qtdade_de_culinaria_distintas.iloc[0, 0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "6. Qual o nome da cidade que possui a maior quantidade de restaurantes que fazem\n",
+    "reservas?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Bhopal'"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cidade_com_maior_qtdade_de_restaurantes_que_entregam = df.loc[df['has_online_delivery'] == 1, ['city', 'restaurant_id']].groupby(\n",
+    "    ['city']).count().sort_values(by='restaurant_id', ascending=False).reset_index()\n",
+    "cidade_com_maior_qtdade_de_restaurantes_que_entregam.iloc[0, 0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "7. Qual o nome da cidade que possui a maior quantidade de restaurantes que fazem\n",
+    "entregas?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Amritsar', 'Vadodara']"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cidade_maior_qtdade_restaurantes_que_entregam = df.loc[df['is_delivering_now'] == 1, ['city', 'restaurant_id']].groupby(\n",
+    "    ['city']).count().sort_values(by='restaurant_id', ascending=False).reset_index()\n",
+    "lista = []\n",
+    "for i in range(len(cidade_maior_qtdade_restaurantes_que_entregam)):\n",
+    "    if re7.iloc[0, 1] == cidade_maior_qtdade_restaurantes_que_entregam.iloc[i, 1]:\n",
+    "        lista.append(cidade_maior_qtdade_restaurantes_que_entregam.iloc[i, 0])\n",
+    "lista"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "8. Qual o nome da cidade que possui a maior quantidade de restaurantes que\n",
+    "aceitam pedidos online?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Bhopal'"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cidade_maior_qtdade_restaurantes_que_aceitam_pedidos_online = df.loc[df['has_online_delivery'] == 1, ['city', 'restaurant_id']].groupby(\n",
+    "    ['city']).count().sort_values(by='restaurant_id', ascending=False).reset_index()\n",
+    "cidade_maior_qtdade_restaurantes_que_aceitam_pedidos_online.iloc[0, 0]"
    ]
   }
  ],
